# todo_rust_actix

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  config.toml  thunder-collection_todo_collection.json
src/: main.rs  settings.rs
src/handlers/: mod.rs  todo_item_handlers.rs  todo_list_handlers.rs
src/models/: mod.rs  todo_item.rs  todo_list.rs
