[package]
name = "todo_rust_actix"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
serde = { version = "1.0.130", features = ["derive"] }
actix-web = "3.3.2"

diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
uuid = "0.8.2"